<resources>
    <string name="app_name">DogsHotel</string>
    <string name="contact_text">Your opinion is Important to us , you can contact us in a number of ways and we will be at your disposal</string>
    <string name="end_order_txt">Thank You for registartion, We promise to take care of your dog! we\'ll hope to see your dog again here :)</string>
    <string name="missing_input">Please fill all the field</string>
    <string name="welcome">Dog\'s Hotel Boutique</string>
    <string name="welcome2">Welcome! We have many spa services and treats to offer your dogs, Have a nice time :)</string>
    <string name="photo_and_video">Please make a photo and a video of your lovely dog!:)</string>
    <string name="register_your_dog">Sign your dog for a spa day</string>
    <string name="see_ya">See ya\' !</string>
    <string name="fill_fields">Fill all the fields and scroll down</string>
    <string name="dog_name">Dog\'s name:</string>
    <string name="enter_dog_name">Enter dog\'s name</string>
    <string name="dog_age">Dog\'s age:</string>
    <string name="enter_dog_age">Enter dog\'s age</string>
    <string name="phone_owner">Owner\'s phone:</string>
    <string name="enter_phone_owner">Enter your phone</string>
    <string name="email_owner">Owner\'s Email:</string>
    <string name="enter_email_owner">Enter your email</string>
    <string name="add_event_calendar">Add event to calendar</string>
    <string name="sign">Sign your dog!</string>
    <string name="opening_hour">Opening hours: 10 am - 8 pm every 60 minutes </string>
    <string name="hello">Hello</string>
    <string name="choose_from">choose from those options:</string>
    <string name="Registration">Registration</string>
    <string name="Contact">Contact us</string>
    <string name="Back">Back</string>
    <string name="thanks_registered">Thank for signing up !</string>
    <string name="details">Your details:</string>
    <string name="scroll_down">Scroll down</string>
    <string name="timer_tv">In 24 hours we will bring out special offers and new treats for dogs who sign up! Turn on the timer for the big moment!!!</string>
    <string name="sms_txt">Here You can contact Us with sms. See ya, Dog\'s Boutique.</string>
    <string name="whatsapp_txt">Fill the message to contact us with Whatsapp.</string>
    <string name="entername_main">Enter your name</string>
    <string name="start">Start</string>
    <string name="addContact">Add us to your phone list :</string>
    <string name="sim_lev">Pay attention for openning hours</string>
    <string name="dont_pick_hour">You didnt pick hour</string>
    <string name="day_and_hour">You didnt pick day and hour</string>
    <string name="didnt_pick_day">You didnt pick day</string>
    <string name="contact_with_us">Contact with us!</string>
    <string name="sikum_azmana">Confirm order</string>
    <string name="dogs_name">Dog\'s name:</string>
    <string name="dogs_age">Dog\'s age:</string>
    <string name="owner_phone">Owner phone:</string>
    <string name="owner_email">Owner email:</string>
</resources>
