<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:outlineSpotShadowColor="@color/colorWhite"
        android:src="@drawable/welcoming"
        android:layout_gravity="center"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="@font/cherry_swash"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#FFF"
        android:shadowColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:textColor="#000"
        android:fontFamily="@font/cherry_swash"
        android:text="@string/welcome2"
        android:background="@drawable/edit_text_shape"
        android:textStyle="bold"
        android:textSize="16sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:hint="@string/entername_main"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/cherry_swash"
        android:textColorHint="@color/colorWhite"
        android:backgroundTint="@color/colorWhite"
        android:id="@+id/name_edittext"
        android:layout_margin="10dp"
        android:gravity="center"/>
    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/shape_selector"
        android:layout_gravity="center"
        android:fontFamily="@font/cherry_swash"
        android:id="@+id/start_btn"
        android:layout_margin="10dp"
        android:padding="20dp"/>



</LinearLayout>





