<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/welcoming"
        android:layout_gravity="center"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#FFF"
        android:layout_margin="10sp"
        android:fontFamily="@font/cherry_swash"
        android:shadowColor="@color/colorPrimary"
        android:textSize="22dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/cherry_swash"
        android:text="@string/opening_hour"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="false"
        android:id="@+id/scroll"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/linear"
            android:layout_marginTop="10dp">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fill_fields"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/cherry_swash"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/dog_name"
                    android:fontFamily="@font/cherry_swash"
                    android:layout_margin="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:id="@+id/dogName_Tv"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_dog_name"
                    android:id="@+id/dog_name"
                    android:padding="10dp"
                    android:background="@drawable/shape_selector"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/cherry_swash"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:inputType="text"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:fontFamily="@font/cherry_swash"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:text="@string/dog_age"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_selector"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/enter_dog_age"
                    android:padding="10dp"
                    android:fontFamily="@font/cherry_swash"
                    android:layout_margin="5dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:id="@+id/dog_age"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/cherry_swash"
                    android:layout_margin="5dp"
                    android:text="@string/phone_owner"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_owner"
                    android:id="@+id/phone"
                    android:background="@drawable/shape_selector"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/cherry_swash"
                    android:textSize="14sp"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:padding="10dp"
                    android:inputType="phone"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/cherry_swash"
                    android:layout_margin="5dp"
                    android:text="@string/email_owner"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email_owner"
                    android:gravity="center"
                    android:id="@+id/email"
                    android:background="@drawable/shape_selector"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/cherry_swash"
                    android:layout_margin="5dp"
                    android:padding="10dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:inputType="textEmailAddress"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/calendar"
                    android:background="@drawable/shape_selector"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:id="@+id/calender_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/ChoosenDay"
                    />


                <ImageButton
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/clock_icon"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:background="@drawable/shape_selector"
                    android:id="@+id/clock_icon"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/ChoosenTime"
                    />



            </LinearLayout>

            <Button
                android:layout_width="200dp"
                android:layout_margin="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_event"
                android:layout_gravity="center"
                android:background="@drawable/shape_selector"
                android:text="@string/add_event_calendar"/>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo_and_video"
                android:fontFamily="@font/cherry_swash"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                />


            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:padding="5dp"
                android:background="@drawable/shape_selector"
                android:id="@+id/camera_btn"
                android:layout_margin="10dp"
                android:src="@drawable/camera"
                android:text="Add your dog picture"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/dog_pic"/>

            <ImageButton
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:padding="15dp"
                android:scaleType="fitXY"
                android:layout_margin="10dp"
                android:src="@drawable/video"
                android:text="video"
                android:background="@drawable/shape_selector"
                android:id="@+id/video_btn"/>


            <VideoView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:id="@+id/dog_video"/>



            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="20dp"
                android:background="@drawable/shape_selector"
                android:text="@string/sign"
                android:id="@+id/order_btn"/>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:visibility="invisible"
                android:id="@+id/progress_bar"/>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/end_order_tv"
                android:layout_marginBottom="10dp"/>

            <Button
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/sikum_order"
                android:layout_gravity="center"
                android:background="@drawable/shape_selector"
                android:padding="10dp"
                android:layout_margin="10sp"
                android:layout_marginBottom="20sp"
                android:text="@string/sikum_azmana"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
