<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:id="@+id/name_output"
            android:textStyle="bold"
            android:fontFamily="@font/cherry_swash"
            android:paddingBottom="10dp"
            android:layout_margin="10dp"
            android:textColor="#FFF"
            android:shadowColor="@color/colorPrimary"
            android:gravity="center"/>
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_selector"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/registration_btn"
            android:text="@string/Registration"
            />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_selector"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:text="@string/Contact"
            android:id="@+id/contact_btn"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/second_dogs"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/shape_selector"
            android:layout_margin="40dp"
            android:text="@string/Back"
            android:textColor="@color/colorPrimary"
            android:id="@+id/back_btn"/>


    </LinearLayout>
</LinearLayout>

